--- a/BaiTapLab/ASP.NET CORE/TipsAndTricks/TatBlog.Core/TatBlog.Core.csproj
+++ b/BaiTapLab/ASP.NET CORE/TipsAndTricks/TatBlog.Core/TatBlog.Core.csproj
@@ -3,7 +3,14 @@
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Folder Include="Collections\" />
+    <Folder Include="Constants\" />
+    <Folder Include="DTO\" />
+    <Folder Include="Settings\" />
+  </ItemGroup>
 
 </Project>
