--- a/BaiTapLab/ASP.NET CORE/TipsAndTricks/TatBlog.Services/TatBlog.Services.csproj
+++ b/BaiTapLab/ASP.NET CORE/TipsAndTricks/TatBlog.Services/TatBlog.Services.csproj
@@ -3,12 +3,19 @@
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\TatBlog.Core\TatBlog.Core.csproj" />
     <ProjectReference Include="..\TatBlog.Data\TatBlog.Data.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Blogs\" />
+    <Folder Include="Extensions\" />
+    <Folder Include="Media\" />
+    <Folder Include="Rss\" />
   </ItemGroup>
 
 </Project>
